Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -556,9 +556,9 @@
     "es-tax-exception-e6": "Spanien: Steuerausnahme aus einem anderen Grund",
     "es-tax-regime-agrarian": "Régimen especial de la agricultura, ganadería y pesca",
     "es-tax-regime-cash-criteria": "Criterio de caja",
-    "es-tax-regime-especial-agp": "Régimen especial de la agricultura, ganadería y pesca",
+    "es-tax-regime-especial-agp": "Besonderes Regime für Landwirtschaft, Viehzucht und Fischerei",
     "es-tax-regime-exempt": "Exento",
-    "es-tax-regime-general": "Régimen general",
+    "es-tax-regime-general": "Allgemeines Regime",
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
@@ -594,7 +594,7 @@
     "export": "exportieren",
     "export-bill": "Exportationsrechnung",
     "extra-file": "Extra Datei",
-    "failed": "Fallido",
+    "failed": "Fehlgeschlagen",
     "families": "Familien",
     "family": "Familie",
     "family-code": "Familiencode",
@@ -638,7 +638,7 @@
     "font-size": "font-size",
     "footer": "Pié de página",
     "footer-text": "Fusszeilen Text",
-    "for-admins": "Para administradores",
+    "for-admins": "Für Administratoren",
     "for-all": "Para todos",
     "for-all-exercises": "Para todos los ejercicios",
     "for-purchase": "Zum Verkauf",
@@ -828,7 +828,7 @@
     "languages-cs_CZ": "Tschechisch",
     "languages-de_DE": "Deutsch",
     "languages-en_EN": "Englisch",
-    "languages-es_AR": "Español (Argentina)",
+    "languages-es_AR": "Spanisch (Argentinien)",
     "languages-es_CL": "Spanisch (Chile)",
     "languages-es_CO": "Spanish (Colombia)",
     "languages-es_CR": "Spanisch (Costa Rica)",
@@ -858,7 +858,7 @@
     "last-purchase-price": "Letzter Einkaufspreis",
     "last-quarter": "Letztes Quartal",
     "last-semester": "Letztes Semester",
-    "last-trimester": "Letztes Trimester",
+    "last-trimester": "Letztes Quartal",
     "last-update": "Letzte Änderung",
     "last-user": "Último usuario",
     "last-week": "Letzte Woche",
@@ -967,7 +967,7 @@
     "monday": "Montag",
     "month": "Mes",
     "month-1": "Enero",
-    "month-10": "Octubre",
+    "month-10": "Oktober",
     "month-11": "Noeviembre",
     "month-12": "Diciembre",
     "month-2": "Febrero",
@@ -1089,7 +1089,7 @@
     "page-configuration": "Seiteneinstellung",
     "page-not-found": "Página no encontrada",
     "page-not-found-p": "No hemos encontrado la página que busca.",
-    "page-option-info": "Desde aquí puedes modificar los campos visibles en este listado o formulario",
+    "page-option-info": "Von hier aus können Sie die sichtbaren Felder in dieser Liste oder Formular ändern",
     "page-total-amount": "Gesamt Seite",
     "pagename": "Seitenname",
     "pages": "Seiten",
@@ -1346,7 +1346,7 @@
     "send-mail": "Send mail",
     "send-mail-error": "send-mail-error",
     "send-mail-ok": "send-mail-ok",
-    "send-videos": "Enviar vídeos",
+    "send-videos": "Videos senden",
     "sent-a-audio": "Envió un audio",
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
@@ -1373,7 +1373,7 @@
     "shipping": "Shipping",
     "shipping-address": "Lieferanschrift",
     "shop": "Tienda",
-    "shops": "Tiendas",
+    "shops": "Geschäfte",
     "short": "Kurz",
     "short-name": "Kurzname:",
     "show": "show",
@@ -1475,7 +1475,7 @@
     "supplier-products": "Lieferantenprodukte",
     "supplier-reference": "Lieferantenreferenz",
     "suppliers": "Lieferanten",
-    "support": "Soporte",
+    "support": "Unterstützung",
     "supported-tax-re-subaccount": "Subcuenta recargo soportado",
     "supported-tax-subaccount": "supported-tax-subaccount",
     "surcharge": "Zuschlag",
@@ -1589,7 +1589,7 @@
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
     "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
-    "upload-file": "Subir archivo",
+    "upload-file": "Datei hochladen",
     "uploaded-at": "geladen am",
     "url": "Webseite",
     "use-gaps": "Lücken nutzen",
