--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -644,7 +644,7 @@
     "for-purchase": "Per l'acquisto",
     "for-sale": "In vendita",
     "foresee": "Foresee",
-    "format": "format",
+    "format": "formato",
     "formula-cost-price": "formula-cost-price",
     "formula-sale-price": "formula-sale-price",
     "formula-to-apply": "Formula da applicare",
@@ -658,7 +658,7 @@
     "from-subaccount": "from-subaccount",
     "full-access": "full-access",
     "full-path": "Percorso completo",
-    "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found": "Gap trovato per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%",
     "general": "Generale",
     "general-concepts": "Concetti generali",
     "general-data": "informazioni generali",
@@ -718,7 +718,7 @@
     "heading-account-group-id": "Gruppo ID dell'account di intestazioni",
     "heading-account-id-root": "Radice dell'account di intestazione",
     "health": "health",
-    "height": "Alto",
+    "height": "Altezza",
     "hello": "Hola",
     "help": "aiutare",
     "help-button-p": "Consulta la ayuda en cada pantalla",
@@ -768,7 +768,7 @@
     "installer-requirements": "Le seguenti estensioni e funzioni sono necessarie per FacturaScript:",
     "integrity-check": "Controllo integrità",
     "integrity-check-help": "Questa è una verifica dell'integrità del sistema, descritta come",
-    "interest": "Interés",
+    "interest": "Interesse",
     "international-identifier": "Identificatore internazionale",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
@@ -797,7 +797,7 @@
     "invoices": "banconote",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
     "ip": "IP",
-    "ip-banned": "ip-banned",
+    "ip-banned": "ip-bannato",
     "irpf": "IRPEF",
     "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
     "irpf-subaccount-not-found": "irpf-subaccount-not-found",
@@ -808,7 +808,7 @@
     "issued": "Issued",
     "item-limit": "Elementi per pagina",
     "items-added-correctly": "%num% elemento\/i aggiunti correttamente",
-    "items-removed-correctly": "items-removed-correctly",
+    "items-removed-correctly": "elementi rimossi correttamente",
     "ivarep-subaccount-not-found": "ivarep-subaccount-not-found",
     "ivasop-account-not-found": "ivasop-account-not-found",
     "january": "Enero",
@@ -818,7 +818,7 @@
     "journal-opening": "journal-opening",
     "journals": "Journals",
     "july": "Julio",
-    "june": "Junio",
+    "june": "Giugno",
     "justified": "justified",
     "key-google-maps": "Clave de Google Maps",
     "keys": "keys",
@@ -837,7 +837,7 @@
     "languages-es_ES": "Spanish (Spain)",
     "languages-es_GT": "Italiano",
     "languages-es_MX": "Spagnolo (Messico)",
-    "languages-es_PA": "Español (Panamá)",
+    "languages-es_PA": "Spagnolo (Panama)",
     "languages-es_PE": "languages-es_PE",
     "languages-es_UY": "languages-es_UY",
     "languages-eu_ES": "languages-eu_ES",
@@ -964,7 +964,7 @@
     "mobile": "mobile",
     "model": "Modelo",
     "model-not-found": "model-not-found",
-    "monday": "monday",
+    "monday": "lunedì",
     "month": "Mes",
     "month-1": "Enero",
     "month-10": "Ottobre",
@@ -1035,7 +1035,7 @@
     "not-stored-content": "Contenido no almacenado",
     "not-valid-email": "Invalid email %email%",
     "not-valid-fiscal-number": "not-valid-fiscal-number",
-    "not-valid-image": "No es una imagen válida",
+    "not-valid-image": "Immagine non valida",
     "not-valid-percentage-retention": "Not valid percentage retention",
     "note": "note",
     "notes": "Gli appunti",
@@ -1043,7 +1043,7 @@
     "notices": "Avvisi",
     "notification": "Notificación",
     "notifications": "Notificaciones",
-    "november": "Noviembre",
+    "november": "Novembre",
     "number": "Numero",
     "number-attachments": "Nº de adjuntos",
     "number-length": "number-length",
@@ -1194,7 +1194,7 @@
     "printing-format": "printing-format",
     "printing-formats": "Formati di stampa",
     "priority": "priority",
-    "private": "private",
+    "private": "privato",
     "private-key": "Clave privada",
     "process": "Proceso",
     "processing": "elaborazione",
@@ -1380,7 +1380,7 @@
     "show-balance-graphic": "show-balance-graphic",
     "show-crm-warnings": "Mostrar avisos CRM",
     "show-expired-receipts": "Mostrar recibos vencidos",
-    "show-month-stats": "Mostrar estadísticas mensuales",
+    "show-month-stats": "Mostra statistiche mensili",
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Show price on print",
     "show-quantity": "Show quantity on print",
@@ -1396,7 +1396,7 @@
     "soap-extension-not-installed": "La extensión SOAP no está activada en PHP. Contacta con tu proveedor de hosting para activarla.",
     "social-security-number": "Social Security number",
     "sort": "Order",
-    "sort-by-column": "Ordenar por columna",
+    "sort-by-column": "Ordina per colonna",
     "sort-by-date-asc": "Ordenar por fecha desc.",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
@@ -1508,7 +1508,7 @@
     "template-not-found": "Modello non trovato",
     "templates": "Plantillas",
     "test": "Test",
-    "test-mail-not-implemented": "El test del controlador de correo Mail no está implementado",
+    "test-mail-not-implemented": "Il test del controller di posta non è implementato",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Color de texto",
     "texts": "testi",
@@ -1584,7 +1584,7 @@
     "until-subaccount": "until-subaccount",
     "update": "update",
     "update-stock": "Update stock",
-    "update-supplier-prices": "update-supplier-prices",
+    "update-supplier-prices": "aggiornamento dei prezzi dei fornitori",
     "update-time": "update-time",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
