--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -504,7 +504,7 @@
     "email-not-configured": "email-not-configured",
     "email-not-sent": "Not sent",
     "email-notification": "Notificación por email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
@@ -563,9 +563,9 @@
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
+    "es-tax-regime-telecom": "Regimes especiais aplicáveis aos serviços de telecomunicações, de radiodifusão ou de televisão e aos prestados por via eletrônica",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
-    "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
+    "es-tax-regime-used-goods": "Regime especial de bens usados, obras de arte, antiguidades e objetos de coleção",
     "estimation": "Estimativa",
     "estimation-email-subject": "O seu orçamento %code%",
     "estimation-email-text": "Olá, vai anexo o orçamento %code%",
@@ -624,7 +624,7 @@
     "find-problems": "Encontrar problemas",
     "finished": "Finalizado",
     "finished-cron": "Finalizou a execução do cron do FacturaScripts, tempo transcorrido: %timeNeeded%",
-    "first-quarter": "Primer trimestre",
+    "first-quarter": "Primeiro trimestre",
     "first-steps": "f",
     "first-trimester": "First trimester",
     "fiscal-data": "Dados fiscais",
@@ -719,11 +719,11 @@
     "heading-account-id-root": "Cabeçalho da raiz da conta",
     "health": "health",
     "height": "Alto",
-    "hello": "Hola",
+    "hello": "Olá",
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
     "help-server-accepts-filesize": "This server support files up to %size% MB.",
-    "hide": "hide",
+    "hide": "ocultar",
     "high": "Alto",
     "high-purchase-price": "Precio más alto",
     "hint-create-accounting-entry": "Create the accounting entry for the regularization of the taxes of the period",
@@ -854,7 +854,7 @@
     "last-ip": "Último IP",
     "last-month": "O último mês",
     "last-price-estimation": "Última precio de presupuesto",
-    "last-price-sale": "Último precio de venta",
+    "last-price-sale": "Último preço de venda",
     "last-purchase-price": "último preço de compra",
     "last-quarter": "last-quarter",
     "last-semester": "Último semestre",
@@ -970,7 +970,7 @@
     "month-10": "Octubre",
     "month-11": "Noeviembre",
     "month-12": "Dezembro",
-    "month-2": "Febrero",
+    "month-2": "Fevereiro",
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Maio",
@@ -1108,7 +1108,7 @@
     "pattern": "pattern",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
-    "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
+    "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "pay",
     "pay-with-card": "pay-with-card",
     "payment": "Pagamento",
@@ -1325,7 +1325,7 @@
     "sdk": "sdk",
     "search": "Pesquisa",
     "search-document": "Escribe el número de %doctype% para buscar.",
-    "search-product": "Search product",
+    "search-product": "Buscar produto",
     "second-hand": "Segunda mano",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
@@ -1341,7 +1341,7 @@
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imagens",
-    "send-invoices": "Enviar facturas",
+    "send-invoices": "Enviar faturas",
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar email",
     "send-mail-error": "send-mail-error",
@@ -1351,7 +1351,7 @@
     "sent-a-document": "Envió un documento",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Enviou uma imagem",
-    "sent-a-video": "Envió un video",
+    "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% el %date%",
     "sepa-suffix": "sepa-suffix",
     "september": "Septiembre",
@@ -1384,7 +1384,7 @@
     "show-pending-remittances": "Mostrar remesas pendientes",
     "show-price": "Show price on print",
     "show-quantity": "Mostrar quantidade ao imprimir",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Mostrar seção nova",
     "signature": "Signature",
     "simple": "Simples",
     "simplified": "Simplificado",
