--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -504,7 +504,7 @@
     "email-not-configured": "email-not-configured",
     "email-not-sent": "Not sent",
     "email-notification": "Notificación por email",
-    "email-notification-disabled": "La notificación de email %name% está desactivada",
+    "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificación de email %name% no encontrada",
     "email-replies": "Respuesta de emails",
     "email-replies-to": "email-replies-to",
@@ -970,7 +970,7 @@
     "month-10": "Octubre",
     "month-11": "Noeviembre",
     "month-12": "Diciembre",
-    "month-2": "Febrero",
+    "month-2": "Fevereiro",
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Maio",
@@ -1108,7 +1108,7 @@
     "pattern": "pattern",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
-    "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
+    "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
     "pay": "pay",
     "pay-with-card": "pay-with-card",
     "payment": "Pagamento",
@@ -1341,7 +1341,7 @@
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
-    "send-invoices": "Enviar facturas",
+    "send-invoices": "Enviar faturas",
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar email",
     "send-mail-error": "send-mail-error",
