--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -743,7 +743,7 @@
     "idem-wildcard-info": "Còpia el valor de la llínea anterior",
     "image": "Imatge",
     "images": "Imatges",
-    "images-added-correctly": "%count% imágenes añadidas correctamente",
+    "images-added-correctly": "%count% imatges afegides correctament",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
     "impacted-tax-subaccount": "Subconte del IVA repercutit",
     "import": "import",
@@ -970,7 +970,7 @@
     "month-10": "Octubre",
     "month-11": "Novembre",
     "month-12": "Diciembre",
-    "month-2": "Febrero",
+    "month-2": "Febrer",
     "month-3": "Marzo",
     "month-4": "Abril",
     "month-5": "Mayo",
@@ -1132,7 +1132,7 @@
     "percentage-surcharge": "% de R.E.",
     "percentage-vat": "% Impost",
     "period": "Periodo",
-    "personalized": "Personalizado",
+    "personalized": "Personalitzat",
     "phase": "phase",
     "phone": "Teléfon",
     "phone2": "Teléfon 2",
@@ -1476,7 +1476,7 @@
     "supplier-reference": "Referència del proveïdor",
     "suppliers": "Proveïdors",
     "support": "Soporte",
-    "supported-tax-re-subaccount": "Subcuenta recargo soportado",
+    "supported-tax-re-subaccount": "Subcompte recàrrec suportat",
     "supported-tax-subaccount": "Subconte del IVA soportat",
     "surcharge": "Recàrrec",
     "surname": "Cognoms",
