Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -567,7 +567,7 @@
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "estimation": "Haushalt",
-    "estimation-email-subject": "estimation-email-subject",
+    "estimation-email-subject": "Schätzungs-E-Mail-Betreff",
     "estimation-email-text": "Guten Tag, in der Anlage Ihr Kostenvoranschlag % Code%",
     "estimations": "Budget",
     "event": "Evento",
@@ -951,7 +951,7 @@
     "meta-description": "FacturaScripts ist ein Billing und Accounting-Software für kleine Unternehmen. Es ist freie Software unter der GNU\/LGPL Lizenz.",
     "method-payment": "Zahlungsart",
     "mime-type": "Mime Type",
-    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-with-cifnif": "Minimalbetrag mit CIF\/NIF",
     "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
     "minimum-stock": "Mindestbestand",
     "minutes": "Minutes",
@@ -988,7 +988,7 @@
     "more-plugins": "more-plugins",
     "move-lines": "Mover líneas",
     "movements": "movements",
-    "my-profile": "Mi perfil",
+    "my-profile": "Mein Profil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Dieses Feld ist nur notwendig, in einigen Hostings MySQL.",
@@ -1067,7 +1067,7 @@
     "opened": "Opened",
     "opening-acounting-completed": "opening-acounting-completed",
     "opening-operation": "Apertura",
-    "operation": "Operación",
+    "operation": "Operation",
     "operator": "Operador",
     "option": "Option",
     "optional": "optional",
@@ -1299,7 +1299,7 @@
     "reset": "Einstellungen erfolgreich zurückgesetzt, drücken Sie <a href=\" %1$s#avanzado\">hier<\/a> um fortzusetzen.",
     "resource": "Ressource",
     "respond": "Responder",
-    "restore": "restore",
+    "restore": "Wiederherstellen",
     "restore-data": "Daten wiederherstellen",
     "result": "Result",
     "retention": "retention",
@@ -1464,7 +1464,7 @@
     "supplier-delivery-notes": "Supplier delivery notes",
     "supplier-estimation": "Supplier estimation",
     "supplier-estimations": "Supplier estimations",
-    "supplier-have-no-iban": "El proveedor %%supplier no tiene IBAN (cuenta bancaria)",
+    "supplier-have-no-iban": "Der Lieferant %%supplier hat keine IBAN (Bankkonto)",
     "supplier-invoice": "Supplier invoice",
     "supplier-invoice-deleted-successfully": "Kaufrechnung 0 wurde erfolgreich gelöscht.",
     "supplier-invoices": "Supplier invoices",
@@ -1540,7 +1540,7 @@
     "total-purchases": "total-purchases",
     "total-sales": "total-sales",
     "total-value-error": "Gesamtmenge von 0 1 falsch (2). Richtige Menge: 3",
-    "total-with-taxes": "Total with taxes",
+    "total-with-taxes": "Gesamt mit Steuern",
     "totalirpf-value-error": "Gesamt-IRPF-Betrag von 0 1 falsch (2). Richtige Menge: 3",
     "totaliva-value-error": "Gesamtsteuerbetrag von 0 1 falsch (2). Richtige Menge: 3",
     "totallinea-value-error": "Fehler im Gesamtbetrag der Mehrwertsteuerzeile der Steuer 0 der Rechnung. Richtiger Wert: 1",
