--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1017,7 +1017,7 @@
     "no-extra-lines": "no-extra-lines",
     "no-gaps-found": "Ningún hueco encontrado",
     "no-invoice": "no-invoice",
-    "no-outstanding-amount": "no-outstanding-amount",
+    "no-outstanding-amount": "nessuna somma in sospeso",
     "no-print-permission": "Non ha il permesso di stampare o esportare",
     "no-reference": "Sin referencia",
     "no-selected-item": "no-selected-item",
@@ -1501,7 +1501,7 @@
     "tax-debit-account": "Debit account for taxes",
     "tax-transport": "Trasporto fiscale",
     "taxes": "Le tasse",
-    "telemetry-data-to-send": "telemetry-data-to-send",
+    "telemetry-data-to-send": "dati di telemetria da inviare",
     "telephone-prefix": "Prefisso telefonico",
     "template": "Modello",
     "template-error": "template-error",
@@ -1572,7 +1572,7 @@
     "undo": "Disfare",
     "unit-profit": "unit-profit",
     "unit-purchase-price": "unit-purchase-price",
-    "unit-sale-price": "unit-sale-price",
+    "unit-sale-price": "prezzo di vendita unitario",
     "unlimited": "Illimitato",
     "unlink": "Desvincular",
     "unlink-file": "unlink-file",
