--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -601,7 +601,7 @@
     "fax": "Fax",
     "february": "Febrer",
     "field-can-not-be-null": "El camp %fieldName% de la taula %tableName% no pot ser nul",
-    "field-required": "Campo requerido: %field%",
+    "field-required": "Camp requerit: %field%",
     "fields": "Campos",
     "file": "Fitxer",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
@@ -780,7 +780,7 @@
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "invalid-number",
     "invalid-request": "Petició no vàlida",
-    "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
+    "invalid-user-can-permission": "Permís no vàlid: %permission%. Els permisos disponibles són access, delete, export, import, update i only-owner-data.",
     "invalid-web": "Adreça web no vàlida",
     "invoice": "Factura",
     "invoice-email-subject": "invoice-email-subject",
@@ -1196,7 +1196,7 @@
     "priority": "Prioritat",
     "private": "private",
     "private-key": "Clave privada",
-    "process": "Proceso",
+    "process": "Procés",
     "processing": "processing",
     "product": "Producte",
     "product-not-found": "Producto %ref% no encontrado",
@@ -1290,7 +1290,7 @@
     "report": "Informe",
     "report-grouping-account": "Agrupar per contes",
     "report-non-grouping-account": "No agrupar per contes",
-    "report-taxes-p": "Este informe permite obtener el desglose de impuestos de las facturas de compra o de venta del rango seleccionado",
+    "report-taxes-p": "Aquest informe permet obtenir el desglossament d'impostos de les factures de compra o de venda del rang seleccionat",
     "reports": "Informes",
     "request-sent": "Petició enviada",
     "required": "required",
@@ -1326,7 +1326,7 @@
     "search": "Busca",
     "search-document": "Escribe el número de %doctype% para buscar.",
     "search-product": "Search product",
-    "second-hand": "Segunda mano",
+    "second-hand": "Segona mà",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segon trimestre",
     "select": "select",
@@ -1347,7 +1347,7 @@
     "send-mail-error": "Hi ha hagut un erro a l'enviar el correu",
     "send-mail-ok": "El correu s'ha enviar correctament",
     "send-videos": "E",
-    "sent-a-audio": "Envió un audio",
+    "sent-a-audio": "Va enviar un àudio",
     "sent-a-document": "Envià un document",
     "sent-a-location": "Envió una ubicación",
     "sent-a-picture": "Envió una imagen",
@@ -1633,7 +1633,7 @@
     "warehouse-must-be-same-business": "Els almagasens d'orige i de destí han de pertànyer a la mateixa empresa",
     "warehouses": "Almagasens",
     "warning": "Atenció",
-    "warnings": "Avisos",
+    "warnings": "Advertiments",
     "web": "Web",
     "website": "Lloc web",
     "wednesday": "wednesday",
