--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -368,7 +368,7 @@
     "daily": "Daily",
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
     "dasboard-backup-li2": "Si borra o desinstala XAMPP, pierde los datos.",
-    "dasboard-backup-li3": "Si pierde, formatea o destruye el PC, pierde los datos.",
+    "dasboard-backup-li3": "S",
     "dashboard": "painel de controle",
     "dashboard-backup": "Copia de seguridad",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
@@ -501,7 +501,7 @@
     "email": "O email",
     "email-bcc": "Email Blind Carbon Copy",
     "email-cc": "Email Carbon Copy",
-    "email-not-configured": "email-not-configured",
+    "email-not-configured": "e",
     "email-not-sent": "Not sent",
     "email-notification": "Notificación por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
@@ -548,7 +548,7 @@
     "error-updating-product-stock": "¡Erro ao atualizar o estoque do item!",
     "errors": "Erros",
     "es_EC": "es_EC",
-    "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
+    "es-tax-exception-e1": "E",
     "es-tax-exception-e2": "España: excepción por el artículo 21 de la Ley del IVA",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "Espanha: exceção do artigo 23 e 24 da Lei do IVA",
@@ -563,7 +563,7 @@
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-surcharge": "Recargo de equivalencia",
-    "es-tax-regime-telecom": "Regímenes especiales aplicables a los servicios de telecomunicaciones, de radiodifusión o de televisión y a los prestados por vía electrónica",
+    "es-tax-regime-telecom": "R",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
     "estimation": "Estimativa",
@@ -776,12 +776,12 @@
     "invalid-date": "Data inválida 0.",
     "invalid-date-there-are-invoices-after": "invalid-date-there-are-invoices-after",
     "invalid-date-there-are-invoices-before": "invalid-date-there-are-invoices-before",
-    "invalid-iban": "invalid-iban",
+    "invalid-iban": "i",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Petición no válida",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
-    "invalid-web": "Dirección web no válida",
+    "invalid-web": "E",
     "invoice": "Fatura",
     "invoice-email-subject": "A sua fatura %code%",
     "invoice-email-text": "Olá, vai anexa a sua fatura %code%",
@@ -1128,7 +1128,7 @@
     "pending-reception": "Pending reception",
     "percentage": "Percentagem",
     "percentage-commission": "% Commission",
-    "percentage-discount": "percentage-discount",
+    "percentage-discount": "p",
     "percentage-surcharge": "% Surcharge",
     "percentage-vat": "% VAT",
     "period": "Período",
@@ -1154,7 +1154,7 @@
     "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
     "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
     "plugin-needed": "Plugin %pluginName% requerido.",
-    "plugin-needs-fs-version": "plugin-needs-fs-version",
+    "plugin-needs-fs-version": "p",
     "plugin-not-compatible": "Plugin %pluginName% não é compatível com FacturaScripts 2018.",
     "plugin-order": "O",
     "plugin-phpversion-error": "El plugin %pluginName% requiere PHP %php% o superior",
@@ -1434,7 +1434,7 @@
     "sub-account": "Sub conta",
     "sub-type": "sub-type",
     "subaccount": "Subcontas",
-    "subaccount-bad-codcuenta": "La subcuenta %codsubcuenta% tiene asignada una cuenta incorrecta.",
+    "subaccount-bad-codcuenta": "A",
     "subaccount-belongs-other-year": "A sub-conta 0 pertence a outro exercício.",
     "subaccount-irpf": "Account for deductions",
     "subaccount-irpf-creditor": "subaccount-irpf-creditor",
@@ -1471,7 +1471,7 @@
     "supplier-not-found": "supplier-not-found",
     "supplier-order": "Supplier order",
     "supplier-orders": "Pedidos de fornecedores",
-    "supplier-payment-concept": "receipt-payment-concept",
+    "supplier-payment-concept": "b",
     "supplier-products": "Produtos de fornecedor",
     "supplier-reference": "Referência do fornecedor",
     "suppliers": "Fornecedores",
